--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.github.anastr:speedviewlib:1.2.0'
+    implementation 'com.android.support:gridlayout-v7:28.0.0'
 
 
 }
